--- a/raconteur/RCMasterSlideWindow.xib
+++ b/raconteur/RCMasterSlideWindow.xib
@@ -141,10 +141,14 @@
                         <rect key="frame" x="157" y="76" width="164" height="22"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" drawsBackground="YES" id="GQy-9V-mZw">
+                            <numberFormatter key="formatter" formatterBehavior="default10_4" usesGroupingSeparator="NO" groupingSize="0" minimumIntegerDigits="0" maximumIntegerDigits="42" id="kcc-Gi-7z3"/>
                             <font key="font" metaFont="system"/>
                             <color key="textColor" name="textColor" catalog="System" colorSpace="catalog"/>
                             <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
+                        <connections>
+                            <binding destination="-2" name="value" keyPath="self.defaultOptions.fontSize" id="yua-3H-0Jh"/>
+                        </connections>
                     </textField>
                 </subviews>
             </view>
